--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.2.3",
     "opencv-react": "0.0.5",
-    "react": "16.8.6",
+    "react": "^17.0.2",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "react-imgpro": "^1.4.1",
+    "react-scripts": "3.0.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "typescript": "3.3.3"
